Fixed issue with final list initialization